@@ -11,23 +11,42 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.Function;
+import net.minecraft.Util;
 import net.minecraft.core.NonNullList;
 import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.util.ExtraCodecs;
-import net.minecraft.world.inventory.CraftingContainer;
+import net.minecraft.world.item.ItemStack;
 
-public record ShapedRecipePattern(int width, int height, NonNullList<Ingredient> ingredients, Optional<Data> data) {
+public final class ShapedRecipePattern {
    private static final int MAX_SIZE = 3;
    public static final MapCodec<ShapedRecipePattern> MAP_CODEC;
    public static final StreamCodec<RegistryFriendlyByteBuf, ShapedRecipePattern> STREAM_CODEC;
+   private final int width;
+   private final int height;
+   private final NonNullList<Ingredient> ingredients;
+   private final Optional<Data> data;
+   private final int ingredientCount;
+   private final boolean symmetrical;
 
-   public ShapedRecipePattern(int width, int height, NonNullList<Ingredient> ingredients, Optional<Data> data) {
+   public ShapedRecipePattern(int var1, int var2, NonNullList<Ingredient> var3, Optional<Data> var4) {
       super();
-      this.width = width;
-      this.height = height;
-      this.ingredients = ingredients;
-      this.data = data;
+      this.width = var1;
+      this.height = var2;
+      this.ingredients = var3;
+      this.data = var4;
+      int var5 = 0;
+      Iterator var6 = var3.iterator();
+
+      while(var6.hasNext()) {
+         Ingredient var7 = (Ingredient)var6.next();
+         if (!var7.isEmpty()) {
+            ++var5;
+         }
+      }
+
+      this.ingredientCount = var5;
+      this.symmetrical = Util.isSymmetrical(var1, var2, var3);
    }
 
    public static ShapedRecipePattern of(Map<Character, Ingredient> var0, String... var1) {
@@ -124,37 +143,36 @@ public record ShapedRecipePattern(int width, int height, NonNullList<Ingredient>
       return var1;
    }
 
-   public boolean matches(CraftingContainer var1) {
-      for(int var2 = 0; var2 <= var1.getWidth() - this.width; ++var2) {
-         for(int var3 = 0; var3 <= var1.getHeight() - this.height; ++var3) {
-            if (this.matches(var1, var2, var3, true)) {
+   public boolean matches(CraftingInput var1) {
+      if (var1.ingredientCount() != this.ingredientCount) {
+         return false;
+      } else {
+         if (var1.width() == this.width && var1.height() == this.height) {
+            if (!this.symmetrical && this.matches(var1, true)) {
                return true;
             }
 
-            if (this.matches(var1, var2, var3, false)) {
+            if (this.matches(var1, false)) {
                return true;
             }
          }
-      }
 
-      return false;
+         return false;
+      }
    }
 
-   private boolean matches(CraftingContainer var1, int var2, int var3, boolean var4) {
-      for(int var5 = 0; var5 < var1.getWidth(); ++var5) {
-         for(int var6 = 0; var6 < var1.getHeight(); ++var6) {
-            int var7 = var5 - var2;
-            int var8 = var6 - var3;
-            Ingredient var9 = Ingredient.EMPTY;
-            if (var7 >= 0 && var8 >= 0 && var7 < this.width && var8 < this.height) {
-               if (var4) {
-                  var9 = (Ingredient)this.ingredients.get(this.width - var7 - 1 + var8 * this.width);
-               } else {
-                  var9 = (Ingredient)this.ingredients.get(var7 + var8 * this.width);
-               }
+   private boolean matches(CraftingInput var1, boolean var2) {
+      for(int var3 = 0; var3 < this.height; ++var3) {
+         for(int var4 = 0; var4 < this.width; ++var4) {
+            Ingredient var5;
+            if (var2) {
+               var5 = (Ingredient)this.ingredients.get(this.width - var4 - 1 + var3 * this.width);
+            } else {
+               var5 = (Ingredient)this.ingredients.get(var4 + var3 * this.width);
             }
 
-            if (!var9.test(var1.getItem(var5 + var6 * var1.getWidth()))) {
+            ItemStack var6 = var1.getItem(var4, var3);
+            if (!var5.test(var6)) {
                return false;
             }
          }
@@ -197,13 +215,9 @@ public record ShapedRecipePattern(int width, int height, NonNullList<Ingredient>
       return this.ingredients;
    }
 
-   public Optional<Data> data() {
-      return this.data;
-   }
-
    static {
       MAP_CODEC = ShapedRecipePattern.Data.MAP_CODEC.flatXmap(ShapedRecipePattern::unpack, (var0) -> {
-         return (DataResult)var0.data().map(DataResult::success).orElseGet(() -> {
+         return (DataResult)var0.data.map(DataResult::success).orElseGet(() -> {
             return DataResult.error(() -> {
                return "Cannot encode unpacked recipe";
             });
@@ -244,7 +258,7 @@ public record ShapedRecipePattern(int width, int height, NonNullList<Ingredient>
                   return "Invalid pattern: empty pattern not allowed";
                });
             } else {
-               int var1 = ((String)var0.get(0)).length();
+               int var1 = ((String)var0.getFirst()).length();
                Iterator var2 = var0.iterator();
 
                String var3;
